# GCP-key-Auditor

./: .gitignore  README.md  gcp-key-auditor.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/gcp_key_auditor/: __init__.py  __main__.py  cli.py  config.py  models.py  probes.py  reporting.py  scanner.py  scoring.py
tests/: test_probes.py  test_scanner.py  test_scoring.py
