[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "gcp-key-auditor"
version = "0.1.0"
description = "CLI auditor that probes exposed Google API keys and estimates real-world impact"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Security Research Tooling" }
]
keywords = ["security", "gcp", "api-key", "auditing", "google-cloud", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Utilities"
]
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1"
]

[project.scripts]
gcp-key-auditor = "gcp_key_auditor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_key_auditor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
